<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <!-- Header -->
    <ImageView
        android:id="@+id/breezLogo"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="122px"
        android:paddingVertical="35px"
        android:src="@drawable/breez_logo_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,PxUsage" />

    <!--  Shoe image  -->
    <ImageView
        android:id="@+id/shoeImage"
        android:layout_width="match_parent"
        android:layout_height="1330px"
        android:scaleType="fitCenter"
        android:background="@color/light_grey"
        android:src="@drawable/shoe_green"
        app:layout_constraintTop_toBottomOf="@id/breezLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,PxUsage" />

    <!--  Shoe Brand  -->
    <TextView
        android:id="@+id/shoeBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/nike"
        android:textAppearance="@style/shoe_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoeImage" />

    <!--  Shoe Name  -->
    <TextView
        android:id="@+id/shoeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:text="@string/ldv_waffle"
        android:textAppearance="@style/shoe_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoeBrand" />

    <!--  Shoe Price  -->
    <TextView
        android:id="@+id/shoePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/price"
        android:textAppearance="@style/shoe_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoeName" />

    <!-- Color Options Carousel -->
    <LinearLayout
        android:id="@+id/colorOptions"
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_marginHorizontal="210px"
        android:layout_marginTop="95dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoePrice">

    </LinearLayout>

    <!-- Size Selector -->
    <LinearLayout
        android:id="@+id/sizeSelector"
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_marginHorizontal="210px"
        android:layout_marginTop="91dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorOptions">

        <TextView
            android:id="@+id/mensSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mens_size"
            android:textAppearance="@style/grey_small" />
    </LinearLayout>

    <!--  Size Guide  -->
    <TextView
        android:id="@+id/sizeGuide"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="210px"
        android:layout_marginTop="115dp"
        android:text="@string/size_guide"
        android:textAppearance="@style/grey_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeSelector" />

    <!-- Description Text -->
    <TextView
        android:id="@+id/shoeDescription"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="210px"
        android:layout_marginTop="92dp"
        android:text="@string/shoe_description"
        android:textAppearance="@style/grey_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeGuide" />

    <!-- Try Now Button -->
    <Button
        android:id="@+id/tryNowButton"
        android:layout_width="match_parent"
        android:layout_height="185px"
        android:layout_marginHorizontal="210px"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:text="@string/try_now"
        android:textAppearance="@style/try_now_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoeDescription" />

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45px"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="204px"
            android:layout_height="41px"
            android:src="@drawable/breez_logo_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25px"
            android:text="@string/powered_by_cyntra_ai"
            android:textAppearance="@style/footer"/>

        <ImageView
            android:layout_width="41px"
            android:layout_height="41px"
            android:src="@drawable/footer_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
